@@ -5,6 +5,8 @@
  * GNUstepOutput: Added Tools/ directory for various helper tools.
  Began exec_helper (A tool to help with /exec)
 
+ * GNUstepOutput: Added /exec and /exec -o commands
+
 2005-06-05 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: Fixed history corruption when closing tab with /close.
  Fixed notifications when removing tabs so that new selection is sent out
